2017-11-25  Bruno Haible  <bruno@clisp.org>

	Add a facility for checking and debugging the ari_asm_* code.
	* arilev1.d: When DEBUG_ARI_ASM is defined, select LOOP_DEBUG_ASM and
	include arilev1dbg.c.
	* arilev1c.d: Apply C() macro to the name of each function.
	* arilev1dbg.d: New file.
	* makemake.in (LISPARIT_INCLUDES): Add it.
	* Makefile.devel (build-porting*-debug_ari_asm): New targets.
	(multibuild-linux-hppa, multibuild-linux-i386): Depend on
	build-porting32-gcc-debug_ari_asm.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	Don't install signal handlers for SIGABRT and SIGILL.
	* spvw_sigterm.d (set_sigterm_handler): Don't install a handler for
	SIGABRT or SIGILL.
	* spvw.d (fill_terminating_signals_mask): Update accordingly.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	Fix comment (regression from 2008-01-15).
	* spvw.d (quit): Note the meaning of a negative final_exitcode.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	Provide a starting point for ari_asm_* development.
	* arilev1c.d: Use 'maybe_local' instead of 'local'.
	* arilev1.d (LOOP_STATIC_C): Renamed from LOOP_EXTERN_C.
	(LOOP_EXTERN_C): New macro. Define maybe_local.
	* arilev1_asm_proto.d: New file.
	* makemake.in (EXTRA_CPARTS): Add arilev1_asm_proto.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	Modernize: Convert source code from K&R C to ANSI C.
	* arilev1c.d: Convert to ANSI C.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	More systematic Makefile.devel target naming.
	* Makefile.devel (build-porting*-ari_asm): Renamed from
	build-porting*-ari-asm.

2017-11-25  Bruno Haible  <bruno@clisp.org>

	More systematic naming of ari* assembly-language files.
	* ari_asm_i386.d: Renamed from ari80386.d.
	* ari_asm_arm.d: Renamed from ariarm.d.
	* ari_asm_hppa.d: Renamed from arihppa.d.
	* ari_asm_mips.d: Renamed from arimips.d.
	* ari_asm_mips64.d: Renamed from arimips64.d.
	* ari_asm_sparc.d: Renamed from arisparc.d.
	* ari_asm_sparc64.d: Renamed from arisparc64.d.